Working on getting progress indicator to draw correctly

--- a/CustomProgressIndicator/Base.lproj/Main.storyboard
+++ b/CustomProgressIndicator/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                         <color key="value" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="progress">
-                                        <real key="value" value="0.33000000000000002"/>
+                                        <real key="value" value="1"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="lineWidth">
                                         <real key="value" value="40"/>
@@ -71,7 +71,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="885" y="659"/>
+            <point key="canvasLocation" x="982" y="668"/>
         </scene>
     </scenes>
 </document>
